# project_template_qml_cpp

./: CMakeLists.txt
cmake/: CodeCoverage.cmake  windeployqt.cmake
src/: CMakeLists.txt  MainApp.cpp  MainApp.h  appinfo.h  main.cpp  qml.qrc
src/qml/: main.qml
tests/: CMakeLists.txt
